# steam-stats

steam-analyzer/: .gitignore  DEPLOYING.md  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
steam-analyzer/backend/: Cargo.toml  Dockerfile
steam-analyzer/backend/migrations/: 20240101000000_init.sql  20250101000000_add_gemini_usage_logs.sql
steam-analyzer/backend/src/: db.rs  main.rs  models.rs  steam_api.rs
steam-analyzer/backend/src/routes/: gemini.rs  images.rs  mod.rs  steam.rs
steam-analyzer/deployment/: deploy.sh  nginx.conf.example  steam-backend.service.example
steam-analyzer/k8s/: backend.yaml  frontend.yaml  ingress.yaml  secrets-example.yaml
steam-analyzer/src/: App.jsx  mockData.js
steam-analyzer/src/__tests__/: App.test.jsx
steam-analyzer/src/components/cards/: AICard.jsx  StatCard.jsx
steam-analyzer/src/components/charts/: ActivityHeatmap.jsx  CustomBarChart.jsx  CustomDonutChart.jsx
steam-analyzer/src/components/common/: GameBannerImage.jsx  GameIcon.jsx  SimpleMarkdown.jsx
steam-analyzer/src/components/features/: AIGrid.jsx  ChartsSection.jsx  StatsGrid.jsx  SteamDataFetcher.jsx  UserBanner.jsx
steam-analyzer/src/components/layout/: Header.jsx
steam-analyzer/src/hooks/: useGeminiAI.js  useSteamData.js  useSteamData.test.jsx  useSteamStats.js
steam-analyzer/src/services/: steamApi.js
steam-analyzer/src/utils/: formatters.js  links.js
